# equafun

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  build.cmd  build.sh  portfile.cmake  vcpkg.json
.cache/clangd/index/: glad.c.3D2B9BF73897F49D.idx  glad.c.B53DD460FA961BDA.idx  glad.c.F8689176D9B6AF7C.idx  glad.h.4CD68671B7F83E1A.idx  glad.h.9C8FEF7AB740D614.idx  glad.h.9E54438B326F7A9D.idx  glad.h.C412F4798E3627D4.idx  khrplatform.h.4AF2EA77C7590921.idx  khrplatform.h.7F2D6B5D6E4A954F.idx  khrplatform.h.825AFA6AD321400F.idx  main.c.C38913A7AC338B40.idx  window.c.965EA2FC9A62D8AC.idx  window.h.77AFDE3DB61D0666.idx
data/shaders/: basicColor.frag  functionRender.vert  lineRender.vert  textColor.frag  textRender.vert
docs/: changelog.md  standards.md
include/core/: app.h  appContext.h  errorHandler.h  input.h  logger.h  window.h
include/expressionEngine/: evaluator.h  functionManager.h  lexer.h  tokens.h
include/expressionEngine/parser/: functionParser.h  shuntingYard.h
include/math/: Mat4.h  Vec2.h  Vec3.h  typeConvert.h  utility.h
include/renderer/: functionRenderer.h  graph.h
include/textRenderer/: text.h
include/utils/: renderUtils.h  shaderUtils.h  utilities.h
libs/include/glad/: glad.h
libs/src/glad/: glad.c
src/: main.c
src/core/: app.c  appContext.c  errorHandler.c  input.c  logger.c  window.c
src/expressionEngine/: evaluator.c  functionManager.c  lexer.c  tokens.c
src/expressionEngine/parser/: functionParser.c  shuntingYard.c
src/math/: math.c  typeConvert.c  utility.c
src/renderer/: functionRenderer.c  graph.c
src/textRenderer/: text.c
src/utils/: renderUtils.c  shaderUtils.c  utilities.c
